# Rotation-Project

./: .gitignore  CMakeLists.txt  README.md
basic/: config.cpp  env.cpp  semantics.cpp  time_guard.cpp
ext/: CMakeLists.txt
include/istool/basic/: config.h  semantics.h  time_guard.h
sygus/: CMakeLists.txt
sygus/parser/: parser.cpp
sygus/theory/: CMakeLists.txt
tasks/: CMakeLists.txt  task_enumeration.cpp  task_fta.cpp
tests/: max.sl  max3.sl  plus.sl
